tests/snapshots/scenarios/060_tree_scope_structural_edges_restrict_graph_filters-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "tree_scope_filters",
  "files": [
    "result.json"
  ],
  "scenario_id": "060_tree_scope_structural_edges_restrict_graph_filters",
  "status": "validated"
}
