tests/snapshots/scenarios/062_tree_scope_tree_level_and_min_words-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "tree_scope_filters",
  "files": [
    "result.json"
  ],
  "scenario_id": "062_tree_scope_tree_level_and_min_words",
  "status": "validated"
}
